--- a/style.css
+++ b/style.css
@@ -85,9 +85,17 @@ align-items: center;
     background-color:#892DE1;
     color: white;
     padding: 10px;
-    border-radius: 20px;
-    
+    border-radius: 20px; 
+    border: solid purple;
 }
+
+.categories p:hover{
+        transition: 1s;
+        background-color: transparent;
+        color: black;
+        border: solid purple;
+
+    }
 
 .sale-image{
     position: relative;
@@ -105,7 +113,24 @@ align-items: center;
     position: absolute;
     top: 10%;
     left: 10%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    opacity: 0;
+    animation-fill-mode: forwards;
     
+}
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 1;
+
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+
+    }
+
 }
 
 .recommended{
