updated media queries

--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ align-items: center;
     align-items: center;
 }
 
+.navbar__s4{
+    display: none;
+}
+
+
 /* My learning Popup*/
 
 .mylearning{
@@ -209,3 +214,32 @@ align-items: center;
     display: flex;
     justify-content: space-between;
 }
+
+/* Media Queries */
+
+@media screen and (max-width:800px){
+
+    body{
+        font-size: 10px;
+    }    
+}
+
+@media screen and (max-width: 600px){
+
+    .course-card{
+        flex-basis: 40%;
+    }
+    .categories{
+        display: none;
+    }
+
+    .navbar__s2,.navbar__s3{
+        display: none;
+    }
+
+    .navbar__s4 {
+        display:block ;
+    }
+
+}
+    
